--- a/style.css
+++ b/style.css
@@ -334,6 +334,9 @@ nav a:hover {
 }
 
 
+/***************************************************
+  Selected Publications
+***************************************************/
 .sel_publications ol {
   padding-left: 20px;
   list-style-position: outside;
@@ -348,13 +351,29 @@ nav a:hover {
 }
 
 /***************************************************
+  Awards
+***************************************************/
+.awards ol {
+  padding-left: 20px;
+  list-style-position: outside;
+  text-align: left;
+  order: reversed;
+}
+
+.awards li {
+  margin: 15px 0px;
+/*  font-size: 0.8rem;*/
+  line-height: 1.4;
+}
+
+/***************************************************
   News
 ***************************************************/
 
 .news-item {
   width: calc(100% - 20px);
   margin-left: 15px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   padding: 10px;
   border-radius: 8px;
   overflow: hidden;
