--- a/style.css
+++ b/style.css
@@ -172,13 +172,13 @@ nav a:hover {
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 40px 0px;
+/*  margin: 40px 0px;*/
   padding: 20px;
   border-bottom: 1px solid #ccc;
 }
 
 .image-container {
-  width: 110px;
+  width: 100px;
 }
 
 #about img {
@@ -445,7 +445,7 @@ color: #3e3c3c  ;  /* #1E90FF a01e2a */
   Publications
 ***************************************************/
 
-
+.publications{margin-top: 15px;}
 .publications h2 {
   margin-top: 20px;
   margin-bottom: 10px;
