--- a/style-research2.css
+++ b/style-research2.css
@@ -15,7 +15,6 @@
 /***************************************************
   Research
 ***************************************************/
-/*
 .research-item {
   display: flex;
   flex-direction: column;
@@ -24,17 +23,29 @@
   margin-bottom: 20px;
 }
 
+/*
+
+.research-item img {
+  width: 200px;
+  margin-right: 30px;
+  margin-top: 0px;
+  filter: grayscale(20%) blur(0px) brightness(100%) contrast(100%) sepia(5%);
+}
+*/
+
 .research-description {
   flex: 1;
 }
 
 .research-description h3 {
+/*  font-size: 20px;*/
   font-weight: 100;
   margin-bottom: 10px;
   margin-top: 0px;
 }
 
 .research-description p {
+/*  font-size: 0.9rem;*/
   line-height: 1.5;
   margin-bottom: 0;
 }
@@ -59,10 +70,11 @@ figure {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center; 
+  text-align: center; /* add this line */
 }
 
 figcaption {
+/*  text-align: center;*/
 font-style: italic;
 color: #1E90FF;
 margin-top: 10px;
@@ -70,88 +82,15 @@ display: block;
 max-width: 200px;
 text-align: center;
 }
-*/
-
-
-
-.research-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-/*  border: 2px solid #ccc;*/
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.research-image {
-  flex: 0 0 15%;
-  margin-right: 20px;
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.research-image img {
-
-  max-width: 100%;
-  height: auto;
-/*  width: 150px; */
-/*  height: 70px;*/
-/*  object-fit: cover;*/
-
-}
-
-.research-content {
-  flex: 1;
-}
-
-.research-title {
-/*  font-size: 1.2rem;*/
-/*  font-weight: bold;*/
-  margin-bottom: 30px;
-  margin-top: 30px;
-}
-
-.research-description {
-/*  font-size: 1rem;*/
-/*  line-height: 1.5;*/
-}
-
-.blockquote {
-  background-color: #f8f8f8;
-  border-left: 4px solid #3498db;
-  padding: 10px 20px;
-  margin: 10px 0;
-  font-style: italic;
-}
-
-
-.codeblock {
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  padding: 10px;
-  border-radius: 5px;
-  font-family: monospace;
-  overflow: auto;
-}
-
-.important{
-    background-color: #f5f5f5;
-    font-family: monospace;
-}
-
-
 
 /* *****************   Responsive  ***************  */
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
 .research-item { flex-direction: column; align-items: center;}
-.research-description {flex: 1; margin-top: 10px;}
+.research-description {flex: 1;}
 .research-description h3 {text-align: center; align-content: center; font-size: 0.8rem;}
-.research-description p {line-height: 1.5; margin-bottom: 0; font-size: 1rem;}
-.research-image {flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 30px; margin-bottom: 20px; max-width: 80%;}
+.research-description p {line-height: 1.5; margin-bottom: 0; font-size: 0.8rem;}
+.research-images {display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 30px; margin-bottom: 20px;}
 figure {display: flex; flex-direction: column; align-items: center; text-align: center; margin-bottom:20px}
 }
