--- a/style-index.css
+++ b/style-index.css
@@ -93,10 +93,10 @@
 }
 
 .sel_publications a:hover {
-    color: #1E90FF;
+    color: deepskyblue;
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
-    border-bottom-color: #1E90FF;  
+    border-bottom-color: deepskyblue; /*#1E90FF */
 }
 
 
