--- a/style-pub.css
+++ b/style-pub.css
@@ -51,10 +51,10 @@
 }
 
 .publications a:hover {
-    color: #1E90FF;
+    color: deepskyblue; /*#1E90FF;*/
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
-    border-bottom-color: #1E90FF;  
+    border-bottom-color: deepskyblue; /* #1E90FF;   */
 }
 
 
