--- a/style-common.css
+++ b/style-common.css
@@ -41,8 +41,10 @@ h1 {
   font-style: normal;
   margin-top: 20px;
   margin-bottom: 20px;
+/*
   border-bottom:2px solid #CCC;
   padding-bottom:3px;
+*/
 /*  color: deepskyblue;*/
 /*  text-shadow: 0 1px white, 0 1px #777;  */
 }
@@ -67,7 +69,7 @@ p {
 }
 
 a {
-  color: #3e3c3c;
+    color: #3e3c3c;
     font-weight: 600;
     text-decoration: none;
 }
