--- a/style-research.css
+++ b/style-research.css
@@ -78,14 +78,14 @@ text-align: center;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-/*  border: 2px solid #ccc;*/
+/*  border: 1px solid #ccc;*/
   padding: 10px;
   border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
 }
 
 .research-image {
-  flex: 0 0 15%;
+  flex: 0 0 18%;
   margin-right: 20px;
   border: 2px solid #ccc;
   border-radius: 10px;
@@ -94,7 +94,6 @@ text-align: center;
 }
 
 .research-image img {
-
   max-width: 100%;
   height: auto;
 /*  width: 150px; */
@@ -138,7 +137,7 @@ text-align: center;
 }
 
 .important{
-    background-color: #f5f5f5;
+    background-color: azure;
     color:darkslategrey;
     font-family: monospace;
 }
