--- a/style-common.css
+++ b/style-common.css
@@ -26,11 +26,12 @@ body {
 main {
   margin: 80px auto;
   margin-top: 46px;
-  max-width: 800px;
+  max-width: 1000px;
   background-color: #fff;
   padding: 20px; /* Add some padding for spacing */
 /*  border-radius: 8px;  */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  margin-bottom: auto;
 }
 
 
