--- a/style-research.css
+++ b/style-research.css
@@ -72,6 +72,27 @@ text-align: center;
 }
 */
 
+.research{margin-top: 15px;}
+
+.research h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+/*  font-size: 1.5rem;*/
+}
+
+
+.research a {
+    color: #3e3c3c;
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.research a:hover {
+    color: deepskyblue; /*#1E90FF;*/
+/*    font-weight: 400;*/
+    border-bottom: 2px solid;
+    border-bottom-color: deepskyblue; /* #1E90FF;   */
+}
 
 
 .research-item {
