--- a/style-blog.css
+++ b/style-blog.css
@@ -3,6 +3,13 @@
 /***************************************************
   Blog 
 ***************************************************/
+
+.blog{
+  margin-top: 40px;
+  margin-bottom: 30px;
+/*  font-size: 1.5rem;*/
+  border-bottom: 1px solid;
+}
 .container {
   width: 100%;
   overflow-x: scroll;
