--- a/style-research.css
+++ b/style-research.css
@@ -75,9 +75,10 @@ text-align: center;
 .research{margin-top: 15px;}
 
 .research h1 {
-  margin-top: 20px;
+  margin-top: 40px;
   margin-bottom: 10px;
 /*  font-size: 1.5rem;*/
+  border-bottom: 1px solid;
 }
 
 
