--- a/style-research.css
+++ b/style-research.css
@@ -78,7 +78,9 @@ text-align: center;
   margin-top: 40px;
   margin-bottom: 10px;
 /*  font-size: 1.5rem;*/
-  border-bottom: 1px solid;
+/*  text-decoration: underline;  */
+/*  padding-bottom: 5px;*/
+  border-color: midnightblue;
 }
 
 
@@ -92,7 +94,7 @@ text-align: center;
     color: deepskyblue; /*#1E90FF;*/
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
-    border-bottom-color: deepskyblue; /* #1E90FF;   */
+    border-bottom-color: deepskyblue; 
 }
 
 
@@ -100,28 +102,25 @@ text-align: center;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-/*  border: 1px solid #ccc;*/
+  border: 1px solid #ccc;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
+  height: 150px;
 }
 
 .research-image {
   flex: 0 0 18%;
   margin-right: 20px;
-  border: 2px solid #ccc;
+/*  border: 2px solid #ccc;*/
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+/*  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 }
 
 .research-image img {
   max-width: 100%;
   height: auto;
-/*  width: 150px; */
-/*  height: 70px;*/
-/*  object-fit: cover;*/
-
 }
 
 .research-content {
@@ -129,16 +128,15 @@ text-align: center;
 }
 
 .research-title {
-/*  font-size: 1.2rem;*/
-/*  font-weight: bold;*/
   margin-bottom: 30px;
-  margin-top: 30px;
+  margin-top: 40px;
+  border-color: midnightblue;
 }
 
 .research-description {
-/*  font-size: 1rem;*/
-/*  line-height: 1.5;*/
 }
+
+
 
 .blockquote {
   background-color: #f8f8f8;
