--- a/style-common.css
+++ b/style-common.css
@@ -50,26 +50,6 @@ h1 {
     
 }
 
-.seven h1 {
-text-align: center;
-    font-size:30px; font-weight:300; color:#222; letter-spacing:1px;
-    text-transform: uppercase;
-
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    grid-template-rows: 27px 0;
-    grid-gap: 20px;
-    align-items: center;
-}
-
-.seven h1:after,.seven h1:before {
-    content: " ";
-    display: block;
-    border-bottom: 1px solid #c50000;
-    border-top: 1px solid #c50000;
-    height: 5px;
-  background-color:#f8f8f8;
-}
 
 
 h2 {
@@ -88,7 +68,7 @@ h3 {
 
 
 p {
-/*  font-size: 0.9rem;*/
+  font-size: 0.9rem;
 }
 
 a {
