publications categories added.

--- a/style-index.css
+++ b/style-index.css
@@ -113,10 +113,10 @@
 }
 
 .publications a:hover {
-    color: midnightblue; /*#1E90FF;*/
+    color: #1E90FF; /*#1E90FF;*/
 /*    font-weight: 400;*/
     border-bottom: 2px solid;
-    border-bottom-color: midnightblue; /* #1E90FF;   */
+    border-bottom-color: #1E90FF; /* #1E90FF;   */
 }
 
 
