--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ nav a:hover {
   display: block;
   margin: 0 auto;
 /*  filter: grayscale(20%) blur(0px) brightness(110%) contrast(100%) sepia(15%);*/
-  filter: hue-rotate(300deg) saturate(0.9);
-  border-radius: 50%;
+/*  filter: hue-rotate(300deg) saturate(0.9);*/
+  border-radius: 70%;
 }
 
 .description {
