--- a/style-common.css
+++ b/style-common.css
@@ -72,8 +72,8 @@ p {
 }
 
 a {
-    color: deepskyblue;
-    font-weight: 600;
+    color: dodgerblue;
+    font-weight: 300;
     text-decoration: none;
 }
 
@@ -230,25 +230,23 @@ nav a:hover {
 
 
 #about .title {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-stretch: condensed;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0px 10px 0px 0;
   text-transform: full-width;
 /*  white-space: nowrap;*/
-/*  background-image: linear-gradient(to right, #1e90ff, #00ced1);*/
-/*
+  background-image: linear-gradient(to right, #1e90ff, #00ced1);
   background-image: conic-gradient(#553c9a, #ee4b2b, #00c2cb, #553c9a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-*/
 }
 
 #about .subtitle {
-  font-size: 0.99rem;
-  margin: 0 0 5px 0;
+  font-size: 0.9rem;
+  margin: 0 0 0 0;
   font-weight: 300;
-/*  color: #777;*/
+  color: #777;
 }
 
 
@@ -266,6 +264,7 @@ nav a:hover {
 #profile li {
   margin-right: 10px;
   font-size: 0.8rem;
+  font-weight: 300;
 }
 
 #profile a {
@@ -279,7 +278,7 @@ nav a:hover {
 }
 
 #cv {
-  margin-top: 10px;
+  margin-top: 5px;
   font-weight: 300;
   color: #777;
 }
